<resources>
    <string name="app_name">AppConejitos</string>
    <string name="btn_jugar">Jugar</string>
    <string name="btn_reglas">Reglas</string>
    <string name="btn_reiniciar">Reiniciar</string>
    <string name="btn_inicio">Inicio</string>
    <string name="nivel_facil">Fácil</string>
    <string name="nivel_medio">Medio</string>
    <string name="nivel_dificil">Difícil</string>
    <string name="tiempo_agotado">Tiempo agotado</string>
    <string name="reglas">Haz clic en los conejos para hacerlos saltar a la piedra siguiente. Los conejos solo pueden pasar por encima de otro una vez. Mueve los que miran a la derecha a la última piedra de la izquierda y los que miran a la izquierda a la última piedra de la derecha para ganar. Planifica tus movimientos o quedarás sin opciones. Usa el botón Reiniciar para comenzar de nuevo y recuerda que el tiempo corre.</string>
    <string name="logo_desc">Logo de la aplicación</string>
    <string name="ganaste">¡Ganaste!</string>
</resources>
