<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:gravity="center">

    <RadioGroup
        android:id="@+id/rgDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFacil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/nivel_facil" />

        <RadioButton
            android:id="@+id/rbMedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel_medio" />

        <RadioButton
            android:id="@+id/rbDificil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel_dificil" />
    </RadioGroup>

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_jugar"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnReglas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reglas"
        android:layout_marginTop="20dp" />

</LinearLayout>
